--- a/data-wrangling-and-analysis-solutions.Rmd
+++ b/data-wrangling-and-analysis-solutions.Rmd
@@ -62,15 +62,6 @@ nhanes %>%
 ```
 
 
-We can use `one_of()` to do the same thing. 
-
-Use `select` to show `marital_status` and `education`, but use `one_of()`.
-
-```{r}
-nhanes %>%
-  select(one_of(c("marital_status", "education")))
-```
-
 Used within `select`, the `contains` function selects variable with certain text in the variable name. 
 
 Use the `contains` function to select variables that ask how many days in the last 30 days the respondent had bad physical and mental health (you should be able to figure out which variables these are from the names). 
@@ -80,6 +71,16 @@ Use the `contains` function to select variables that ask how many days in the la
 nhanes %>%
   select(contains("hlth_bad"))
 ```
+
+Used within `select`, the `starts_with` function selects variable with certain text in the variable name. 
+
+Use the `starts_with` function to select variables that start with the letter h.
+
+```{r}
+nhanes %>% 
+  select(starts_with("h"))
+```
+
 
 
 We can `select` a range of columns using the var1:var2 pattern. `select` all the variables from `health_gen` to the end.
@@ -204,7 +205,7 @@ Create a chain that keeps only those are college grads (line #1). Then, `filter`
 ```{r}
 nhanes %>% 
   filter(education == "College Grad") %>% 
-  filter(marital_status == "Divorced" | marital_status == "Separated") %>% 
+  filter(marital_status %in% c("Divorced", "Separated", "Widowed")) %>%
   select(education, marital_status)
 ```
 
@@ -296,7 +297,8 @@ Use `group_by` for `gender` and `work` (whether or not respondents are working) 
 ```{r}
 nhanes %>% 
   group_by(gender, work) %>% 
-  summarize(mean_hours_sleep = mean(sleep_hrs_night, na.rm = TRUE))
+  summarize(mean_hours_sleep = mean(sleep_hrs_night, na.rm = TRUE),
+            number_of_observations = n())
 ```
 
 
@@ -311,7 +313,7 @@ Use `count` to show the number of responses by highest level of education comple
 
 ```{r}
 nhanes %>% 
-  count(education)
+  count(education) 
 ```
 
 
@@ -322,7 +324,7 @@ Use `count` to show the number of responses for `education` and `phys_active`.
 
 ```{r}
 nhanes %>% 
-  count(education, phys_active)
+  count(education, phys_active) 
 ```
 
 
@@ -348,7 +350,7 @@ Do the same thing as above, but put it in descending order using `desc`.
 ```{r}
 nhanes %>% 
   count(education) %>% 
-  arrange(desc(n))
+  arrange(desc(n)) 
 ```
 
 We often use `arrange` at the end of chains to display things in order.
@@ -358,17 +360,15 @@ Create a chain that does the following:
 1. Uses `filter` to only include those age 30 or older
 2. Uses `group_by` to create a male and female group
 3. Uses `summarize` to calculate a new variable called `mean_bad_mental_health_days` for males and females
-4. Uses `mutate` to round `mean_bad_mental_health_days` to one decimal places
-5. Drop any NAs in the `education` column
-5. Uses `arrange` to put `mean_bad_mental_health_days` in ascending order
+4. Uses `mutate` to round `mean_bad_mental_health_days` to one decimal place
+5. Uses `arrange` to put `mean_bad_mental_health_days` in descending order
 
 ```{r}
 nhanes %>% 
   filter(age >= 30) %>% 
-  group_by(gender, education) %>% 
+  group_by(gender) %>% 
   summarize(mean_bad_mental_health_days = mean(days_ment_hlth_bad, na.rm = TRUE)) %>% 
   mutate(mean_bad_mental_health_days = round(mean_bad_mental_health_days, digits = 1)) %>% 
-  drop_na(education) %>% 
   arrange(desc(mean_bad_mental_health_days))
 ```
 
@@ -385,7 +385,7 @@ mental_health_over_30 <- nhanes %>%
   group_by(gender) %>% 
   summarize(mean_bad_mental_health_days = mean(days_ment_hlth_bad, na.rm = TRUE)) %>% 
   mutate(mean_bad_mental_health_days = round(mean_bad_mental_health_days, digits = 1)) %>% 
-  arrange(mean_bad_mental_health_days)
+  arrange(desc(mean_bad_mental_health_days))
 ```
 
 
